--- a/index.html
+++ b/index.html
@@ -83,28 +83,34 @@
     <!-- End Header Area -->
 
     <!-- Start Hero Area -->
-    <section id="home" class="hero-area">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5 col-md-12 col-12">
-                    <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Play.Win.Earn</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">Start enjoying</p>
-                        <div class="button wow fadeInLeft" data-wow-delay=".8s">
-                            <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
-                            <a href="javascript:void(0)" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
-                                Play</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-md-12 col-12">
-                    <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
-                        <img src="assets/images/hero/phone.png" alt="#">
+ <!-- Start Hero Area -->
+<section id="home" class="hero-area">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-5 col-md-12 col-12">
+                <div class="hero-content">
+                    <h1 class="wow fadeInLeft" data-wow-delay=".4s">Play.Win.Earn</h1>
+                    <p class="wow fadeInLeft" data-wow-delay=".6s">Start enjoying</p>
+                    <div class="button wow fadeInLeft" data-wow-delay=".8s">
+                        <!-- iOS button (optional, always hidden if you don’t have iOS app yet) -->
+                        <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
+
+                        <!-- Android button -->
+                        <a href="/downloads/betxcircle.apk" class="btn btn-alt android-only" download>
+                            <i class="lni lni-play-store"></i> Download for Android
+                        </a>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-7 col-md-12 col-12">
+                <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
+                    <img src="assets/images/hero/phone.png" alt="#">
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
+
     <!-- End Hero Area -->
 
  
@@ -132,34 +138,30 @@
     </div>
 </section>
 
-  <section id="download-section" class="section call-action">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
-                <div class="cta-content">
-                    <h2 class="wow fadeInUp" data-wow-delay=".2s">
-                        Get the Latest BetxCircle App <br>Directly on Android
-                    </h2>
-                    <p class="wow fadeInUp" data-wow-delay=".4s">
-                        Download the APK directly from our site and enjoy all features instantly!
-
-                         Download the APK using the button above.
-
-                         Go to your device’s <strong>Settings</strong> → <strong>About phone</strong>.
-
-                         Tap <strong>Build number</strong> 7 times to enable <strong>Developer Options</strong>.
-                         Go back to <strong>Settings</strong> → <strong>Developer Options</strong> and ensure it’s turned on.
-                         Enable <strong>Install unknown apps</strong> for your browser or file manager.
-                         Locate the downloaded APK in your device’s <strong>Downloads</strong> folder.
-                         Tap the APK file and select <strong>Install</strong>.
-                         Once installed, open the app and enjoy!
-                    </p>
-                   
-                </div>
-            </div>
-        </div>
-    </div>
+ <!-- Start Call To Action Area -->
+<section id="download-section" class="section call-action">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
+              <div class="cta-content">
+                  <h2 class="wow fadeInUp" data-wow-delay=".2s">
+                      Get the Latest BetxCircle App <br>Directly on Android
+                  </h2>
+                  <p class="wow fadeInUp" data-wow-delay=".4s">
+                      Download the APK directly from our site and enjoy all features instantly!
+                  </p>
+                  <div class="button wow fadeInUp" data-wow-delay=".6s">
+                      <!-- Android download button -->
+                      <a href="/downloads/betxcircle.apk" class="btn android-only" download>
+                          <i class="lni lni-play-store"></i> Download APK
+                      </a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </section>
+
 
     <!-- End Call To Action Area -->
 
@@ -197,6 +199,20 @@
 
     <!-- ========================= JS here ========================= -->
     <script src="assets/js/bootstrap.min.js"></script>
+
+    <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const userAgent = navigator.userAgent.toLowerCase();
+    const androidButtons = document.querySelectorAll(".android-only");
+
+    if (userAgent.includes("android")) {
+      androidButtons.forEach(btn => btn.style.display = "inline-block");
+    } else {
+      androidButtons.forEach(btn => btn.style.display = "none");
+    }
+  });
+</script>
+
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/tiny-slider.js"></script>
     <script src="assets/js/glightbox.min.js"></script>
@@ -215,5 +231,6 @@
         cu.start();
     </script>
 </body>
+
 
 </html>
