--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
 
                         <!-- Android button -->
-                        <a href="/downloads/betxcircle.apk" class="btn btn-alt android-only" download>
+                        <a href="https://github.com/bond0010732/betxcircleweb/releases/tag/v1.0.0/betxcircle.apk" class="btn btn-alt android-only" download>
                             <i class="lni lni-play-store"></i> Download for Android
                         </a>
                     </div>
@@ -128,7 +128,7 @@
                         Download the APK directly from our site and enjoy all features instantly!
                     </p>
                     <div class="button wow fadeInUp" data-wow-delay=".6s">
-                        <a href="/downloads/betxcircle.apk" class="btn" download>
+                        <a href="https://github.com/bond0010732/betxcircleweb/releases/tag/v1.0.0/betxcircle.apk" class="btn" download>
                             Download APK
                         </a>
                     </div>
@@ -234,3 +234,4 @@
 
 
 </html>
+
