--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 
                         <!-- Android button -->
                         <a href="https://github.com/bond0010732/betxcircleweb/releases/tag/v1.0.0/betxcircle.apk" class="btn btn-alt android-only" download>
-                            <i class="lni lni-play-store"></i> Download for Android
+                            <button style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;">
+    <i class="lni lni-play-store"></i> 
+    Download for Android
+  </button>
                         </a>
                     </div>
                 </div>
@@ -129,7 +132,10 @@
                     </p>
                     <div class="button wow fadeInUp" data-wow-delay=".6s">
                         <a href="https://github.com/bond0010732/betxcircleweb/releases/tag/v1.0.0/betxcircle.apk" class="btn" download>
-                            Download APK
+                           <button style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;">
+    <i class="lni lni-play-store"></i> 
+    Download for Android
+  </button>
                         </a>
                     </div>
                 </div>
@@ -234,4 +240,5 @@
 
 
 </html>
+
 
