--- a/index.html
+++ b/index.html
@@ -84,90 +84,74 @@
 
     <!-- Start Hero Area -->
  <!-- Start Hero Area -->
+<!-- Start Hero Area -->
 <section id="home" class="hero-area">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-5 col-md-12 col-12">
-                <div class="hero-content">
-                    <h1 class="wow fadeInLeft" data-wow-delay=".4s">Play.Win.Earn</h1>
-                    <p class="wow fadeInLeft" data-wow-delay=".6s">Start enjoying</p>
-                    <div class="button wow fadeInLeft" data-wow-delay=".8s">
-                        <!-- iOS button (optional, always hidden if you don’t have iOS app yet) -->
-                        <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-5 col-md-12 col-12">
+        <div class="hero-content">
+          <h1 class="wow fadeInLeft" data-wow-delay=".4s">Play.Win.Earn</h1>
+          <p class="wow fadeInLeft" data-wow-delay=".6s">Start enjoying</p>
+          <div class="button wow fadeInLeft" data-wow-delay=".8s">
+            <!-- iOS button (optional, hidden if you don’t have iOS app yet) -->
+            <a href="javascript:void(0)" class="btn ios-only" style="display:none;">
+              <i class="lni lni-apple"></i> App Store
+            </a>
 
-                        <!-- Android button -->
-                        <a href="https://github.com/bond0010732/betxcircleweb/releases/tag/v1.0.0/betxcircle.apk" class="btn btn-alt android-only" download>
-                            <button style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;">
-    <i class="lni lni-play-store"></i> 
-    Download for Android
-  </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-7 col-md-12 col-12">
-                <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
-                    <img src="assets/images/hero/phone.png" alt="#">
-                </div>
-            </div>
+            <!-- Android button -->
+            <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk" 
+               class="btn btn-alt android-only" 
+               download
+               style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;text-decoration:none;">
+              <i class="lni lni-play-store"></i>
+              Download for Android
+            </a>
+          </div>
         </div>
+      </div>
+      <div class="col-lg-7 col-md-12 col-12">
+        <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
+          <img src="assets/images/hero/phone.png" alt="#">
+        </div>
+      </div>
     </div>
+  </div>
 </section>
-
+<!-- End Hero Area -->
     <!-- End Hero Area -->
 
  
 
-    <!-- Start Call To Action Area -->
-  <section id="download-section" class="section call-action">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
-                <div class="cta-content">
-                    <h2 class="wow fadeInUp" data-wow-delay=".2s">
-                        Get the Latest BetxCircle App <br>Directly on Android
-                    </h2>
-                    <p class="wow fadeInUp" data-wow-delay=".4s">
-                        Download the APK directly from our site and enjoy all features instantly!
-                    </p>
-                    <div class="button wow fadeInUp" data-wow-delay=".6s">
-                        <a href="https://github.com/bond0010732/betxcircleweb/releases/tag/v1.0.0/betxcircle.apk" class="btn" download>
-                           <button style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;">
-    <i class="lni lni-play-store"></i> 
-    Download for Android
-  </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+   
 
  <!-- Start Call To Action Area -->
+<!-- Start Call To Action Area -->
 <section id="download-section" class="section call-action">
   <div class="container">
-      <div class="row">
-          <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
-              <div class="cta-content">
-                  <h2 class="wow fadeInUp" data-wow-delay=".2s">
-                      Get the Latest BetxCircle App <br>Directly on Android
-                  </h2>
-                  <p class="wow fadeInUp" data-wow-delay=".4s">
-                      Download the APK directly from our site and enjoy all features instantly!
-                  </p>
-                  <div class="button wow fadeInUp" data-wow-delay=".6s">
-                      <!-- Android download button -->
-                      <a href="/downloads/betxcircle.apk" class="btn android-only" download>
-                          <i class="lni lni-play-store"></i> Download APK
-                      </a>
-                  </div>
-              </div>
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
+        <div class="cta-content">
+          <h2 class="wow fadeInUp" data-wow-delay=".2s">
+            Get the Latest BetxCircle App <br>Directly on Android
+          </h2>
+          <p class="wow fadeInUp" data-wow-delay=".4s">
+            Download the APK directly from our site and enjoy all features instantly!
+          </p>
+          <div class="button wow fadeInUp" data-wow-delay=".6s">
+            <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk" 
+               class="btn android-only"
+               download
+               style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;text-decoration:none;">
+              <i class="lni lni-play-store"></i>
+              Download for Android
+            </a>
           </div>
+        </div>
       </div>
+    </div>
   </div>
 </section>
-
+<!-- End Call To Action Area -->
 
     <!-- End Call To Action Area -->
 
@@ -240,5 +224,6 @@
 
 
 </html>
+
 
 
