--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
-        <div class="cta-content">
+        <div class="cta-content text-center">
           <h2 class="wow fadeInUp" data-wow-delay=".2s">
             Get the Latest BetxCircle App <br>Directly on Android
           </h2>
           <p class="wow fadeInUp" data-wow-delay=".4s">
             Download the APK directly from our site and enjoy all features instantly!
           </p>
-          <div class="button wow fadeInUp" data-wow-delay=".6s">
+          <div class="button wow fadeInUp" data-wow-delay=".6s" style="display:flex;justify-content:center;">
             <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk" 
                class="btn android-only"
                download
-               style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;text-decoration:none;">
+               style="display:inline-flex;align-items:center;gap:8px;padding:10px 20px;background:#041c24;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;text-decoration:none;">
               <i class="lni lni-play-store"></i>
               Download for Android
             </a>
@@ -151,6 +151,7 @@
     </div>
   </div>
 </section>
+
 <!-- End Call To Action Area -->
 
     <!-- End Call To Action Area -->
@@ -238,6 +239,7 @@
 
 
 </html>
+
 
 
 
