--- a/index.html
+++ b/index.html
@@ -89,26 +89,28 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-5 col-md-12 col-12">
-        <div class="hero-content">
+        <div class="hero-content text-center">
           <h1 class="wow fadeInLeft" data-wow-delay=".4s">Play.Win.Earn</h1>
           <p class="wow fadeInLeft" data-wow-delay=".6s">Start enjoying</p>
-          <div class="button wow fadeInLeft" data-wow-delay=".8s">
+          
+          <div class="button wow fadeInLeft" data-wow-delay=".8s" style="display:flex;justify-content:center;gap:12px;flex-wrap:wrap;">
             <!-- iOS button (optional, hidden if you don’t have iOS app yet) -->
-            <a href="javascript:void(0)" class="btn ios-only" style="display:none;">
+            <a href="javascript:void(0)" class="btn ios-only" style="display:none;align-items:center;gap:8px;padding:10px 16px;background:#000;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
               <i class="lni lni-apple"></i> App Store
             </a>
 
             <!-- Android button -->
-            <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk" 
-               class="btn btn-alt android-only" 
+            <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk"
+               class="btn btn-alt android-only"
                download
-               style="display:flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border:none;border-radius:8px;font-size:16px;cursor:pointer;text-decoration:none;">
-              <i class="lni lni-play-store"></i>
-              Download for Android
+               style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
+              <i class="lni lni-play-store"></i> Download for Android
             </a>
           </div>
+
         </div>
       </div>
+
       <div class="col-lg-7 col-md-12 col-12">
         <div class="hero-image wow fadeInRight" data-wow-delay=".4s">
           <img src="assets/images/hero/phone.png" alt="#">
@@ -117,6 +119,7 @@
     </div>
   </div>
 </section>
+
 <!-- End Hero Area -->
     <!-- End Hero Area -->
 
@@ -239,6 +242,7 @@
 
 
 </html>
+
 
 
 
