--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
           
           <div class="button wow fadeInLeft" data-wow-delay=".8s" style="display:flex;justify-content:center;gap:12px;flex-wrap:wrap;">
             <!-- iOS button (optional, hidden if you don’t have iOS app yet) -->
-            <a href="javascript:void(0)" class="btn ios-only" style="display:none;align-items:center;gap:8px;padding:10px 16px;background:#000;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
+               <a href="#"
+               class="btn btn-alt android-only"
+               download
+               style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
               <i class="lni lni-apple"></i> App Store
             </a>
-
+          </div>
             <!-- Android button -->
             <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk"
                class="btn btn-alt android-only"
@@ -242,6 +245,7 @@
 
 
 </html>
+
 
 
 
