--- a/index.html
+++ b/index.html
@@ -93,15 +93,20 @@
           <h1 class="wow fadeInLeft" data-wow-delay=".4s">Play.Win.Earn</h1>
           <p class="wow fadeInLeft" data-wow-delay=".6s">Start enjoying</p>
           
-          <div class="button wow fadeInLeft" data-wow-delay=".8s" style="display:flex;justify-content:center;gap:12px;flex-wrap:wrap;">
-            <!-- iOS button (optional, hidden if you don’t have iOS app yet) -->
-               <a href="#"
-               class="btn btn-alt android-only"
-               download
-               style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
-              <i class="lni lni-apple"></i> App Store
-            </a>
-          </div>
+        <div class="button wow fadeInLeft" data-wow-delay=".8s" 
+     style="display:flex;justify-content:center;gap:12px;flex-wrap:wrap;">
+  <a href="#"
+     class="btn btn-alt android-only"
+     download
+     style="display:inline-flex;align-items:center;justify-content:center;gap:8px;
+            padding:10px 16px;background:#041c24;color:#fff;border-radius:8px;
+            font-size:16px;text-decoration:none;line-height:1;">
+    <i class="lni lni-apple" style="font-size:20px;line-height:1;vertical-align:middle;"></i>
+    <span>App Store</span>
+  </a>
+</div>
+
+            
             <!-- Android button -->
             <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk"
                class="btn btn-alt android-only"
@@ -245,6 +250,7 @@
 
 
 </html>
+
 
 
 
