--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
      download
      style="display:inline-flex;align-items:center;justify-content:center;gap:8px;
             padding:10px 16px;background:#041c24;color:#fff;border-radius:8px;
-            font-size:16px;text-decoration:none;line-height:1;">
+            font-size:16px;text-decoration:none;line-height:1;margin-bottom:16px;">
     <i class="lni lni-apple" style="font-size:20px;line-height:1;vertical-align:middle;"></i>
     <span>App Store</span>
   </a>
@@ -109,7 +109,7 @@
             
             <!-- Android button -->
             <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk"
-               class="btn btn-alt android-only"
+               class="btn android-only"
                download
                style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;background:#34a853;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
               <i class="lni lni-play-store"></i> Download for Android
@@ -250,6 +250,7 @@
 
 
 </html>
+
 
 
 
