--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             
             <!-- Android button -->
-            <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircle.apk"
+            <a href="https://github.com/bond0010732/betxcircleweb/releases/download/v1.0.0/betxcircleApp.apk"
                class="btn android-only"
                download
                style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;background:#041c24;color:#fff;border-radius:8px;font-size:16px;text-decoration:none;">
@@ -250,6 +250,7 @@
 
 
 </html>
+
 
 
 
