--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Betxcircle - Play games.</title>
+    <title>Betxcircle - Play games. Newest Version</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/Logo.png" />
+  <!-- Standard Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logo/Logo.png" />
+<link rel="shortcut icon" href="/assets/images/logo/Logo.png" />
+
+<!-- Apple Touch Icon (for iOS home screen) -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/logo/Logo.png" />
+
+<!-- Android/Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="/assets/images/logo/Logo.png" />
+
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -263,6 +272,7 @@
 
 
 </html>
+
 
 
 
